--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.AndroidStudioProject"
         tools:targetApi="31">
         <activity
+            android:name=".ThirdWindow"
+            android:exported="false" />
+        <activity
+            android:name=".SecondWindow"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
