--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,10 @@ android {
         versionCode 1
         versionName "1.0"
 
+        dataBinding {
+            enabled = true
+        }
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
